--- a/src/main/resources/co/gov/deajvpar/gestcontractclient/fx/PanelDireccionEjecutiva.fxml
+++ b/src/main/resources/co/gov/deajvpar/gestcontractclient/fx/PanelDireccionEjecutiva.fxml
@@ -17,7 +17,7 @@
 
 <StackPane alignment="TOP_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1240.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.gov.deajvpar.gestcontractclient.fx.controller.PanelDireccionEjecutivaController">
    <children>
-      <VBox fx:id="panelVer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="816.0" prefWidth="1220.0" style="-fx-background-color: #E4E4E5;" visible="false">
+      <VBox fx:id="panelVer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="816.0" prefWidth="1220.0" style="-fx-background-color: #E4E4E5;">
          <children>
             <HBox prefHeight="35.0" prefWidth="1200.0">
                <children>
@@ -97,7 +97,7 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </VBox>
-      <VBox fx:id="panelCrear" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="891.0" style="-fx-background-color: #E4E4E5;">
+      <VBox fx:id="panelCrear" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="474.0" prefWidth="891.0" style="-fx-background-color: #E4E4E5;" visible="false">
          <children>
             <HBox prefHeight="35.0" prefWidth="1200.0">
                <children>
@@ -214,12 +214,7 @@
                               <Font size="17.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btnCancelar" mnemonicParsing="false" onAction="#actionEventBotonCancelar" prefHeight="45.0" prefWidth="140.0" style="-fx-background-color: #1c0cfc;" text="Cancelar" textFill="#fcf9f9">
-                           <font>
-                              <Font size="17.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="btnVolver" mnemonicParsing="false" onAction="#actionEventBtnVolver" prefHeight="45.0" prefWidth="139.0" style="-fx-background-color: #F7453D;" text="Volver" textFill="#fcf9f9">
+                        <Button fx:id="btnVolver" mnemonicParsing="false" onAction="#actionEventBtnVolver" prefHeight="45.0" prefWidth="139.0" style="-fx-background-color: #F7453D;" text="Cancelar" textFill="#fcf9f9">
                            <font>
                               <Font size="17.0" />
                            </font>
